# IC8071_Ciberseguridad

./: README.md
CleanedFFPEG/: CMakeLists.txt  macros.h  mem.h  opt.c  pixdesc.h  pixfmt.h  rational.h
CleanedFFPEG/.scannerwork/: report-task.txt
CleanedFFPEG/.scannerwork/scanner-report/: activerules.pb  analysis-warnings.pb  component-1.pb  metadata.pb
T_Shellcode1/: a.out  binary.txt  instructions.txt  parser.py  shellcode  shellcode.s  test  test.c
T_Shellcode1/Docu/: shellcodet1Estebanlm.md
